objects/Case.object
<CustomObject>
    <fields>
        <fullName>Funnel_Status__c</fullName>
        <formula>CASE( Status,
&quot;Additional Information Needed&quot;,&quot;Working&quot;, 
&quot;Assigned&quot;,&quot;Escalated&quot;, 
&quot;Closed&quot;,&quot;Resolved&quot;, 
&quot;Closed-Feature Request Logged&quot;,&quot;Escalated&quot;,
&quot;Closed Dealer Issue&quot;,&quot;Resolved&quot;,
&quot;Escalate&quot;,&quot;Escalated&quot;,
&quot;Information Submitted&quot;, &quot;Working&quot;,
&quot;Need to Follow up&quot;,&quot;Working&quot;,
&quot;New&quot;,&quot;Waiting&quot;,
&quot;On Hold&quot;, &quot;Working&quot;,
&quot;Resolved&quot;,&quot;Resolved&quot;,
&quot;Resolved-Pending Dev Release&quot;, &quot;Resolved&quot;,
&quot;Resolved-Waiting on Customer&apos;s Approval&quot;, &quot;Resolved&quot;,
&quot;Submitting Additional Information&quot;,&quot;Working&quot;,
&quot;Unresolved&quot;,&quot;Working&quot;,
&quot;Waiting on FTP drop&quot;,&quot;Working&quot;,
&quot;Waiting on response&quot;,&quot;Working&quot;,
&quot;Working&quot;, &quot;Working&quot;,
&quot;Escalated&quot;, &quot;Waiting&quot;,
&quot;Rejected&quot;,&quot;Working&quot;,
&quot;Returned to Support&quot;,&quot;Working&quot;,
&quot;&quot;)</formula>
        <label>Funnel Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GateKeeper_Reason__c</fullName>
        <label>Gatekeeper Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Astera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Source Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Setup Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import Timed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Inventory Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intended Dealer Result</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Many manually entered vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial DMS File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Determine Cause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wandering Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grandfathered_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This case was esc before the rule was in place</inlineHelpText>
        <label>Grandfathered Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAY_SA_Flair__c</fullName>
        <formula>IF( ISPICKVAL(Account.Haystak_Strategic_Account__c,&quot;Yes&quot;),IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021ew4&amp;oid=00D700000008zHZ&amp;lastMod=1430246035000&quot;,&quot;Strategic&quot;) , NULL)</formula>
        <inlineHelpText>formula field that reads the field &quot;Haystak Strategric Account?&quot; and if yes, displays an image</inlineHelpText>
        <label>HAY SA Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Been_Flagged_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Case has been flagged by a Queue Lead sometime in the past. Formerly set to Manager.</description>
        <inlineHelpText>This Case has been flagged by a Queue Lead sometime in the past.</inlineHelpText>
        <label>Has Been Flagged by Queue Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Been_Flagged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that this Case has been flagged by a worker sometime in the past.</description>
        <inlineHelpText>Denotes that this Case has been flagged by a worker sometime in the past.</inlineHelpText>
        <label>Has Been Flagged by Worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haystak_Alert__c</fullName>
        <formula>IF(
AND(Escalation_Required__c = False, RecordType.DeveloperName = &quot;Haystak&quot;), IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000020zcu&amp;oid=00D700000008zHZ&amp;lastMod=1395788277000&quot;, &quot;NOT Escalated&quot;),NULL)</formula>
        <inlineHelpText>formula field that looks at the escalation required field (updated by workflow when a Case is escalated) and if false shows an image</inlineHelpText>
        <label>Haystak Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Campaign_Type__c</fullName>
        <inlineHelpText>this field is updated when a case runner is created for a new request</inlineHelpText>
        <label>Haystak Campaign Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoryText__c</fullName>
        <label>Working Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Modified__c</fullName>
        <formula>(NOW()- LastModifiedDate )  * 1440/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Modified</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integralink_Ticket__c</fullName>
        <label>Integralink Ticket#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark a case as Private</description>
        <inlineHelpText>Blocks the Self Generated Email to Contact Name / Case marked as Internal Use Only</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsChild__c</fullName>
        <formula>if( ParentId != null, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsChild</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Assigned__c</fullName>
        <description>Determines if the running user is assigned to the case.</description>
        <formula>IF(Assigned_To__c = $User.Id, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_After_Imp__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate) &gt;  Account.Implementation_Date__c , &quot;YES&quot;, &quot;NO&quot;)</formula>
        <inlineHelpText>Formula field - If the Case opened date is greater than the account implementation date then update to yes, otherwise input no</inlineHelpText>
        <label>Issue After Imp?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Priority__c</fullName>
        <description>Used for Jira Integration.</description>
        <label>Jira Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Team__c</fullName>
        <description>Used for Jira integration.</description>
        <label>Jira Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Owner__c</fullName>
        <inlineHelpText>Trigger updates this field to the prior owner of the Case when the owner is changed</inlineHelpText>
        <label>Level 1 Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOE_Determined__c</fullName>
        <inlineHelpText>Milestone to designate that the level of effort has been determined. Feature Requests only.</inlineHelpText>
        <label>LOE Determined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Age__c</fullName>
        <formula>IF(IsClosed =False, Today() - Last_Activity_Date__c , null)</formula>
        <inlineHelpText>shows the number of days since the last activity</inlineHelpText>
        <label>Last Activity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <inlineHelpText>updated by a trigger - looks at outgoing email that the subject starts with Email:  0 or subject of a call that starts with O/G</inlineHelpText>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Preview__c</fullName>
        <label>Last Activity Preview</label>
        <length>163</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Case_Runner__c</fullName>
        <label>Last Case Runner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <label>Last Comment</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date_Modified_by_TFS__c</fullName>
        <inlineHelpText>updated by the sync program between TFS and SF</inlineHelpText>
        <label>Last Date Modified by TFS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Role__c</fullName>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <label>Last Modified by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Ticket__c</fullName>
        <inlineHelpText>the ticket # from Haystak Sugar CRM migration</inlineHelpText>
        <label>Haystak Ticket #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Listing_Vendor_1__c</fullName>
        <label>Listing Vendor 1</label>
        <picklist>
            <picklistValues>
                <fullName>Autobytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarSoup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EasyAutoSales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBizautos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EveryCarListed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IzmoCars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds and Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA VehicleFinder.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vast.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web2Carz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Listing_Vendor_2__c</fullName>
        <label>Listing Vendor 2</label>
        <picklist>
            <picklistValues>
                <fullName>Autobytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarSoup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EasyAutoSales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBizautos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EveryCarListed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IzmoCars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds and Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA VehicleFinder.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vast.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web2Carz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Listing_Vendor_3__c</fullName>
        <label>Listing Vendor 3</label>
        <picklist>
            <picklistValues>
                <fullName>Autobytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarSoup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EasyAutoSales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBizautos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EveryCarListed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IzmoCars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds and Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA VehicleFinder.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vast.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web2Carz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_of_Error_Issue__c</fullName>
        <inlineHelpText>copy and paste the url address from the browser window where the error occurs</inlineHelpText>
        <label>Location of Error/Issue</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MES_Manager__c</fullName>
        <description>The Manager that the MES has escalated this Case to.</description>
        <inlineHelpText>The Manager that the MES has escalated this Case to.</inlineHelpText>
        <label>MES Manager</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Proxy_URL__c</fullName>
        <description>Haystak</description>
        <label>Mobile Proxy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ModifiedByOwner__c</fullName>
        <formula>IF(LastModifiedBy.Username =  Assigned_To__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>ModifiedByOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Spend__c</fullName>
        <formula>CASE( Business_Unit__c , 
&quot;vAuto&quot;,  Account.vAuto_Spend__c , 
&quot;VinSolutions&quot;,  Account.Billed_Recurring_Revenue__c ,NULL)</formula>
        <label>Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MotoSnap_Version__c</fullName>
        <label>MotoSnap Version</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NMP_Triggered_by_Website_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>this field is updated by the case trigger and used to send a notification to the case contact when a support Case was sent to website support in error and is re-routed back to general support</inlineHelpText>
        <label>NMP Triggered by Website Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navigation_1__c</fullName>
        <label>Navigation 1</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Motosnap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Navigation_2__c</fullName>
        <label>Navigation 2</label>
        <picklist>
            <controllingField>Navigation_1__c</controllingField>
            <picklistValues>
                <fullName>Activity Breakdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointments Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blogs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyers Guide Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Tracking Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Vinsticker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Views</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership CRM Activity Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Videos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Navigation_3__c</fullName>
        <label>Navigation 3</label>
        <picklist>
            <controllingField>Navigation_2__c</controllingField>
            <picklistValues>
                <fullName>Account Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Listings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active server Log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Websites List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Customer Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Desking Global Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASI V23 Test Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authenticom Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMate FTP Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Price Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bounced Monitored Emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bounced NoReply Emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk User Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Provider Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDR Holding Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDR Import Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy Processes Log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon Layouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Task Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM File Import</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Neglected__c</fullName>
        <formula>IF (
   AND (
        OR( 
            !ISPICKVAL( Status , &quot;Waiting on response&quot;),
            !BEGINS( TEXT(Status), &quot;Resolved&quot;),
            !CONTAINS( TEXT(Status), &quot;Closed&quot;),
            !ISPICKVAL( Status , &quot;On Loan&quot;) 
        ),
        OR(
            Last_Activity_Age__c  &gt; 2,
            AND( 
                Last_Activity_Age__c == NULL,
                TODAY() - Date_Created__c &gt; 2
            )
        ),
	!ISPICKVAL(Dealer_Issue__c, &quot;Yes&quot;),
        !ISPICKVAL(Parent.Dealer_Issue__c, &quot;Yes&quot;)
    ),
   IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&quot;, &quot;Red Exclamation&quot;) ,
   NULL
)</formula>
        <inlineHelpText>Checks for age of two days or greater for Cases that are not Resolved, Closed, or Waiting on Response.</inlineHelpText>
        <label>Neglected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <description>Haystak</description>
        <label>Haystak New Account?</label>
        <picklist>
            <picklistValues>
                <fullName>New Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_from_Manager_Flag__c</fullName>
        <description>Notes logged by the queue lead that flagged this Case for a higher ranking.</description>
        <inlineHelpText>Notes logged by the queue lead that flagged this Case for a higher ranking.</inlineHelpText>
        <label>Notes from Queue Lead Flag</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_from_Worker_Flag__c</fullName>
        <description>Notes logged by the worker that flagged this Case for a higher ranking.</description>
        <inlineHelpText>Notes logged by the worker that flagged this Case for a higher ranking.</inlineHelpText>
        <label>Notes from Worker Flag</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Child_Tickets__c</fullName>
        <label>Number of Child Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Dev_Redirects__c</fullName>
        <description>The number of times this Case was redirected back to Support by Development.</description>
        <inlineHelpText>The number of times this Case was redirected back to Support by Development.</inlineHelpText>
        <label>Number of Dev Redirects</label>
        <summaryFilterItems>
            <field>Case_Runner__c.CreatedById</field>
            <operation>equals</operation>
            <value>00570000001fBU9</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Runner__c.Runner_Action__c</field>
            <operation>equals</operation>
            <value>Redirect</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Runner__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Unresolves__c</fullName>
        <label>Number of Unresolves</label>
        <summaryFilterItems>
            <field>Case_Runner__c.Runner_Action__c</field>
            <operation>equals</operation>
            <value>Unresolved</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Runner__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OT_Case_Priority__c</fullName>
        <formula>CASE( Escalation_Type__c ,
&quot;General Questions&quot;, 2,
&quot;VIN Decoding Problem&quot;, 2,
&quot;Data Import Problem / Customer Data Issue&quot;, 1,
&quot;Vendor Integration Issue&quot;,0,
&quot;Desking Push Problem&quot;,4,
&quot;Defect - Critical Exception Occurring&quot;, 1,
&quot;Defect - Unexpected Result&quot;,3,
&quot;Feature Request&quot;,0,
&quot;Emergency Feature Request&quot;,0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OT Case Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OT_Defect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OT Defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OT_Feature_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OT Feature Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Time_Delivery__c</fullName>
        <description>Haystak Time tracking</description>
        <formula>IF(
 DATEVALUE(ClosedDate) &gt;  Due_Date__c,
 &quot;Late&quot;,
 &quot;On Time&quot;
)</formula>
        <inlineHelpText>Updated by the system</inlineHelpText>
        <label>On Time Delivery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Time_QC__c</fullName>
        <description>Haystak Time tracking</description>
        <formula>IF(
   Date_to_QC__c &lt;= Date_Due_to_QC__c,
 &quot;On Time&quot;,
 &quot;Late&quot;
)</formula>
        <inlineHelpText>Updated By the system</inlineHelpText>
        <label>On Time QC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Month__c</fullName>
        <formula>MONTH( Date_Created__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that calculates the # of the month the Case was opened</inlineHelpText>
        <label>Open Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the POA related to this Case</inlineHelpText>
        <label>POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Ops_Account_Settings__c</fullName>
        <description>Haystak</description>
        <formula>&quot;SEM COMPETITORS&gt;&gt;&quot; &amp;
  Account.Competitors__c  &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;SEO COMPETITORS&gt;&gt;&quot; &amp;
  Account.SEO_Competitors__c  &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;SEM CITIES IN GEO&gt;&gt;&quot;
&amp; Account.Cities_in_Geo__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;SEO CITIES IN GEO&gt;&gt;&quot;
&amp; Account.SEO_Cities_in_Geo__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;ALIAS&gt;&gt;&quot;
 &amp; Account.Alias__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;TAGLINES/SLOGANS/SIGNATURES&gt;&gt;&quot;
 &amp;Account.Taglines_Slogan__c</formula>
        <inlineHelpText>formula field that reads the Paid Ops Account Settings</inlineHelpText>
        <label>Paid Ops Account Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDefectID__c</fullName>
        <formula>Parent.Defect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentDefectID</label>
        <type>Text</type>
    </fields>
</CustomObject>